--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
    <input type="radio" name="show_hosp" id="chika" value="1"><label for="select_hosp_1">地価</label>
 <!-- <input type="radio" name="show_hosp" id="med_all" value="2"><label for="select_hosp_2">Hospitals and clinics</label> -->
 <input type="radio" name="show_hosp" id="school" value="2"><label for="select_hosp_1">学校</label>
-<br><button id="off_button">Clear markers</button>&ensp; <font color="red">赤</font> :地価 &nbsp;<font color="blue">青</font>:学校
+<br><button id="off_button">Clear markers</button>&ensp; 
+<br>
+   <br><font color="red">赤</font> :地価 &nbsp;<font color="blue">青</font>:学校
 
 
 </div>
