--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
 <!--Map is drawn  here-->
 <div id="map"></div>
 <div id="selector-hosp">
-   <input type="radio" name="show_hosp" id="chika_school" value="3"><label for="select_hosp_1">地価And学校</label>
+   <input type="radio" name="show_hosp" id="chika_school" value="3"><label for="select_hosp_1">地価と学校</label>
    <input type="radio" name="show_hosp" id="chika" value="1"><label for="select_hosp_1">地価</label>
 <!-- <input type="radio" name="show_hosp" id="med_all" value="2"><label for="select_hosp_2">Hospitals and clinics</label> -->
 <input type="radio" name="show_hosp" id="school" value="2"><label for="select_hosp_1">学校</label>
-<br><button id="off_button">Clear markers</button>&ensp; 
-<br>
-   <br><font color="red">赤</font> :地価 &nbsp;<font color="blue">青</font>:学校
+&ensp; <font color="red">赤</font> :地価 &nbsp;<font color="blue">青</font>:学校
 
 
 </div>
+<button id="off_button">マーカークリア</button>
+<div id="console_log"></div>
+<script type='text/javascript' src="schools_Tokyo.js"></script>
 
-<script type='text/javascript' src="chika_data.js"></script>
-<script type='text/javascript' src="chika.js"></script>
-<script type='text/javascript' src="population_chiba_1km_mesh.js"></script>
-<script type='text/javascript' src="schools_chiba.js"></script>
+<script type='text/javascript' src="chika2.js"></script>
+<script type='text/javascript' src="tokyoMesh.js"></script>
+
+
+<script type='text/javascript' src="chika_data4.js"></script>
 </body>
 </html>
